# USB-Device-Configuration-Tool

./: .gitignore  CMakeLists.txt  README.md  app.manifest  version.rc
src/: device.cpp  device.h  inputworker.cpp  inputworker.h  keyboardlayout.cpp  keyboardlayout.h  keyboardwidget.cpp  keyboardwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  protocol.cpp  protocol.h  resources.qrc  usages.cpp  usages.h
